text misalignment again fixed

--- a/src/styles/pdfl.css
+++ b/src/styles/pdfl.css
@@ -106,7 +106,7 @@ body{
   display: block;
   margin-right: auto;
   margin-left: auto;
-  margin-top: 4rem;
+  margin-top: 5rem;
 }
 
 #num-pages{
@@ -734,18 +734,12 @@ input[type="number"]::-webkit-outer-spin-button {
   #side-page-reference-container {
     transition: 0.5s;
     position: relative;
-    right: 0;
+    right: 2%;
     overflow-x: hidden;
     overflow-y: hidden;
     z-index: 2;
+    cursor: move;
     position: fixed;
-    width: 50%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #f5f5f5;
-    margin-top: 4%;
   }
 
 
@@ -1107,8 +1101,8 @@ input[type="number"]::-webkit-outer-spin-button {
 
   #close-btn-reference{
     position: fixed;
-    margin-top: 8%;
-    left: 60%;
+    margin-top: 2rem;
+    right: 46rem;
     font-size: 40px;
     z-index: 999;
     color: black;
